...
            self?.updateAvatar()
        }
    }
    
    func didTapLogout() {
        let model = AlertModel(
            title: "Пока, пока",
            message: "Уверены, что хотите выйти?",
            actions: [
                AlertActionModel(
                    title: "Да",
                    style: .default,
                    completion: { [weak self] in
                        guard let self else { return }
                        profileLogoutService.logout()
                        view?.switchToSplashViewController()
                    }),
...
