...
    
    private func configureButton() {
        let logoutImage = UIImage(resource: .logoutButton)
        actionButton.setImage(logoutImage, for: .normal)
        actionButton.translatesAutoresizingMaskIntoConstraints = false
        actionButton.addTarget(self, action: #selector(didTapLogoutButton), for: .touchUpInside)
        actionButton.accessibilityIdentifier = "logoutButton"
    }
    
    private func setupHierarchy() {
        view.addSubview(avatarImageView)
        view.addSubview(nameLabel)
        view.addSubview(loginNameLabel)
...
